{
  "version": 4,
  "terraform_version": "1.13.5",
  "serial": 31,
  "lineage": "c2972039-8f60-4b39-194d-d4b28c9e4c9a",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat_eip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "a",
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0b870b127ffd1019d",
            "arn": "arn:aws:ec2:ap-south-1:580358760698:elastic-ip/eipalloc-0b870b127ffd1019d",
            "association_id": "eipassoc-05b12d93792d90a5d",
            "domain": "vpc",
            "id": "eipalloc-0b870b127ffd1019d",
            "network_border_group": "ap-south-1",
            "network_interface": "eni-05ca7ac7c9b2c114b",
            "private_dns": "ip-10-0-1-138.ap-south-1.compute.internal",
            "private_ip": "10.0.1.138",
            "public_dns": "ec2-13-204-52-43.ap-south-1.compute.amazonaws.com",
            "public_ip": "13.204.52.43",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "sample-python-app-nat-eip-a"
            },
            "tags_all": {
              "Name": "sample-python-app-nat-eip-a"
            },
            "vpc": true
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_subnet.public",
            "aws_vpc.main"
          ]
        },
        {
          "index_key": "b",
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-087283484bf787e9c",
            "arn": "arn:aws:ec2:ap-south-1:580358760698:elastic-ip/eipalloc-087283484bf787e9c",
            "association_id": "eipassoc-082c1c55ee68e8724",
            "domain": "vpc",
            "id": "eipalloc-087283484bf787e9c",
            "network_border_group": "ap-south-1",
            "network_interface": "eni-003a7030905c684f1",
            "private_dns": "ip-10-0-2-128.ap-south-1.compute.internal",
            "private_ip": "10.0.2.128",
            "public_dns": "ec2-43-205-101-178.ap-south-1.compute.amazonaws.com",
            "public_ip": "43.205.101.178",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "sample-python-app-nat-eip-b"
            },
            "tags_all": {
              "Name": "sample-python-app-nat-eip-b"
            },
            "vpc": true
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_subnet.public",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:580358760698:internet-gateway/igw-039cbd546962a8ae6",
            "id": "igw-039cbd546962a8ae6",
            "owner_id": "580358760698",
            "tags": {
              "Name": "sample-python-app-igw"
            },
            "tags_all": {
              "Name": "sample-python-app-igw"
            },
            "vpc_id": "vpc-0c1090d933b1ce382"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "alb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:ap-south-1:580358760698:loadbalancer/app/sample-python-app-alb/88532517f3036a79",
            "arn_suffix": "app/sample-python-app-alb/88532517f3036a79",
            "client_keep_alive": 3600,
            "connection_logs": [
              {
                "enabled": false
              }
            ],
            "desync_mitigation_mode": "defensive",
            "dns_name": "sample-python-app-alb-278528882.ap-south-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "enable_zonal_shift": false,
            "id": "arn:aws:elasticloadbalancing:ap-south-1:580358760698:loadbalancer/app/sample-python-app-alb/88532517f3036a79",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "sample-python-app-alb",
            "preserve_host_header": false,
            "security_groups": [
              "sg-07d7b787ca352ab08"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-06ed3bb2a5090dc08"
              },
              {
                "subnet_id": "subnet-09741606197969258"
              }
            ],
            "subnets": [
              "subnet-06ed3bb2a5090dc08",
              "subnet-09741606197969258"
            ],
            "tags": {
              "Name": "sample-python-app-alb"
            },
            "tags_all": {
              "Name": "sample-python-app-alb"
            },
            "vpc_id": "vpc-0c1090d933b1ce382",
            "xff_header_processing_mode": "append",
            "zone_id": "ZP97RAFLXTNZK"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.alb_sg",
            "aws_subnet.public",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "http",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:ap-south-1:580358760698:listener/app/sample-python-app-alb/88532517f3036a79/374488feb3232b5c",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:ap-south-1:580358760698:targetgroup/sample-python-app-tg/f210ff40ec7f7df5",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-south-1:580358760698:listener/app/sample-python-app-alb/88532517f3036a79/374488feb3232b5c",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:ap-south-1:580358760698:loadbalancer/app/sample-python-app-alb/88532517f3036a79",
            "mutual_authentication": [],
            "port": 80,
            "protocol": "HTTP",
            "routing_http_request_x_amzn_mtls_clientcert_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_issuer_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_leaf_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_serial_number_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_subject_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_validity_header_name": null,
            "routing_http_request_x_amzn_tls_cipher_suite_header_name": null,
            "routing_http_request_x_amzn_tls_version_header_name": null,
            "routing_http_response_access_control_allow_credentials_header_value": "",
            "routing_http_response_access_control_allow_headers_header_value": "",
            "routing_http_response_access_control_allow_methods_header_value": "",
            "routing_http_response_access_control_allow_origin_header_value": "",
            "routing_http_response_access_control_expose_headers_header_value": "",
            "routing_http_response_access_control_max_age_header_value": "",
            "routing_http_response_content_security_policy_header_value": "",
            "routing_http_response_server_enabled": true,
            "routing_http_response_strict_transport_security_header_value": "",
            "routing_http_response_x_content_type_options_header_value": "",
            "routing_http_response_x_frame_options_header_value": "",
            "ssl_policy": "",
            "tags": {},
            "tags_all": {},
            "tcp_idle_timeout_seconds": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_lb.alb",
            "aws_lb_target_group.tg",
            "aws_security_group.alb_sg",
            "aws_subnet.public",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "tg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:ap-south-1:580358760698:targetgroup/sample-python-app-tg/f210ff40ec7f7df5",
            "arn_suffix": "targetgroup/sample-python-app-tg/f210ff40ec7f7df5",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 2,
                "interval": 30,
                "matcher": "200-399",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-south-1:580358760698:targetgroup/sample-python-app-tg/f210ff40ec7f7df5",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancer_arns": [
              "arn:aws:elasticloadbalancing:ap-south-1:580358760698:loadbalancer/app/sample-python-app-alb/88532517f3036a79"
            ],
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "sample-python-app-tg",
            "port": 5000,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "tags": {
              "Name": "sample-python-app-tg"
            },
            "tags_all": {
              "Name": "sample-python-app-tg"
            },
            "target_failover": [
              {
              }
            ],
            "target_group_health": [
              {
                "dns_failover": [
                  {
                    "minimum_healthy_targets_count": "1",
                    "minimum_healthy_targets_percentage": "off"
                  }
                ],
                "unhealthy_state_routing": [
                  {
                    "minimum_healthy_targets_count": 1,
                    "minimum_healthy_targets_percentage": "off"
                  }
                ]
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "ip",
            "vpc_id": "vpc-0c1090d933b1ce382"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "a",
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0b870b127ffd1019d",
            "association_id": "eipassoc-05b12d93792d90a5d",
            "connectivity_type": "public",
            "id": "nat-0b5f0b1865b13a984",
            "network_interface_id": "eni-05ca7ac7c9b2c114b",
            "private_ip": "10.0.1.138",
            "public_ip": "13.204.52.43",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-06ed3bb2a5090dc08",
            "tags": {
              "Name": "sample-python-app-nat-a"
            },
            "tags_all": {
              "Name": "sample-python-app-nat-a"
            }
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_eip.nat_eip",
            "aws_internet_gateway.igw",
            "aws_subnet.public",
            "aws_vpc.main"
          ]
        },
        {
          "index_key": "b",
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-087283484bf787e9c",
            "association_id": "eipassoc-082c1c55ee68e8724",
            "connectivity_type": "public",
            "id": "nat-0c4f1e5944eee44d9",
            "network_interface_id": "eni-003a7030905c684f1",
            "private_ip": "10.0.2.128",
            "public_ip": "43.205.101.178",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-09741606197969258",
            "tags": {
              "Name": "sample-python-app-nat-b"
            },
            "tags_all": {
              "Name": "sample-python-app-nat-b"
            }
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_eip.nat_eip",
            "aws_internet_gateway.igw",
            "aws_subnet.public",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "a",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:580358760698:route-table/rtb-0f65067b22f24bb5c",
            "id": "rtb-0f65067b22f24bb5c",
            "owner_id": "580358760698",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0b5f0b1865b13a984",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "sample-python-app-private-rt-a"
            },
            "tags_all": {
              "Name": "sample-python-app-private-rt-a"
            },
            "timeouts": null,
            "vpc_id": "vpc-0c1090d933b1ce382"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_eip.nat_eip",
            "aws_internet_gateway.igw",
            "aws_nat_gateway.nat",
            "aws_subnet.private",
            "aws_subnet.public",
            "aws_vpc.main"
          ]
        },
        {
          "index_key": "b",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:580358760698:route-table/rtb-0541a5dafebdff00e",
            "id": "rtb-0541a5dafebdff00e",
            "owner_id": "580358760698",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0c4f1e5944eee44d9",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "sample-python-app-private-rt-b"
            },
            "tags_all": {
              "Name": "sample-python-app-private-rt-b"
            },
            "timeouts": null,
            "vpc_id": "vpc-0c1090d933b1ce382"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_eip.nat_eip",
            "aws_internet_gateway.igw",
            "aws_nat_gateway.nat",
            "aws_subnet.private",
            "aws_subnet.public",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:580358760698:route-table/rtb-066dad60bea8323a6",
            "id": "rtb-066dad60bea8323a6",
            "owner_id": "580358760698",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-039cbd546962a8ae6",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "sample-python-app-public-rt"
            },
            "tags_all": {
              "Name": "sample-python-app-public-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-0c1090d933b1ce382"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_assoc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "a",
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-03b205d44af712752",
            "route_table_id": "rtb-0f65067b22f24bb5c",
            "subnet_id": "subnet-09fd899ab71f7a170"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_eip.nat_eip",
            "aws_internet_gateway.igw",
            "aws_nat_gateway.nat",
            "aws_route_table.private",
            "aws_subnet.private",
            "aws_subnet.public",
            "aws_vpc.main"
          ]
        },
        {
          "index_key": "b",
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0512edb519fb61b98",
            "route_table_id": "rtb-0541a5dafebdff00e",
            "subnet_id": "subnet-095a30fb3cefb4586"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_eip.nat_eip",
            "aws_internet_gateway.igw",
            "aws_nat_gateway.nat",
            "aws_route_table.private",
            "aws_subnet.private",
            "aws_subnet.public",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_assoc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "a",
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0854aa8f17ecc6afd",
            "route_table_id": "rtb-066dad60bea8323a6",
            "subnet_id": "subnet-06ed3bb2a5090dc08"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_route_table.public",
            "aws_subnet.public",
            "aws_vpc.main"
          ]
        },
        {
          "index_key": "b",
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0a742676b9dbd3e7a",
            "route_table_id": "rtb-066dad60bea8323a6",
            "subnet_id": "subnet-09741606197969258"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_route_table.public",
            "aws_subnet.public",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "alb_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:580358760698:security-group/sg-07d7b787ca352ab08",
            "description": "ALB security group",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-07d7b787ca352ab08",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTP from internet",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "sample-python-app-alb-sg",
            "name_prefix": "",
            "owner_id": "580358760698",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "sample-python-app-alb-sg"
            },
            "tags_all": {
              "Name": "sample-python-app-alb-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0c1090d933b1ce382"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "svc_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:580358760698:security-group/sg-07327ef9dcb2779c4",
            "description": "Service security group",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-07327ef9dcb2779c4",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "Allow from ALB SG",
                "from_port": 5000,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-07d7b787ca352ab08"
                ],
                "self": false,
                "to_port": 5000
              }
            ],
            "name": "sample-python-app-svc-sg",
            "name_prefix": "",
            "owner_id": "580358760698",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "sample-python-app-svc-sg"
            },
            "tags_all": {
              "Name": "sample-python-app-svc-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0c1090d933b1ce382"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.alb_sg",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "a",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:580358760698:subnet/subnet-09fd899ab71f7a170",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1a",
            "availability_zone_id": "aps1-az1",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-09fd899ab71f7a170",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "580358760698",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "sample-python-app-private-a"
            },
            "tags_all": {
              "Name": "sample-python-app-private-a"
            },
            "vpc_id": "vpc-0c1090d933b1ce382"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main"
          ]
        },
        {
          "index_key": "b",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:580358760698:subnet/subnet-095a30fb3cefb4586",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1b",
            "availability_zone_id": "aps1-az3",
            "cidr_block": "10.0.4.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-095a30fb3cefb4586",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "580358760698",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "sample-python-app-private-b"
            },
            "tags_all": {
              "Name": "sample-python-app-private-b"
            },
            "vpc_id": "vpc-0c1090d933b1ce382"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "a",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:580358760698:subnet/subnet-06ed3bb2a5090dc08",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1a",
            "availability_zone_id": "aps1-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-06ed3bb2a5090dc08",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "580358760698",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "sample-python-app-public-a"
            },
            "tags_all": {
              "Name": "sample-python-app-public-a"
            },
            "vpc_id": "vpc-0c1090d933b1ce382"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main"
          ]
        },
        {
          "index_key": "b",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:580358760698:subnet/subnet-09741606197969258",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1b",
            "availability_zone_id": "aps1-az3",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-09741606197969258",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "580358760698",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "sample-python-app-public-b"
            },
            "tags_all": {
              "Name": "sample-python-app-public-b"
            },
            "vpc_id": "vpc-0c1090d933b1ce382"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:580358760698:vpc/vpc-0c1090d933b1ce382",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0267131b02697b0b8",
            "default_route_table_id": "rtb-02f5c33fc3762316a",
            "default_security_group_id": "sg-02e5aac4d17d08699",
            "dhcp_options_id": "dopt-09ddb51c3a270a1d0",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0c1090d933b1ce382",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-02f5c33fc3762316a",
            "owner_id": "580358760698",
            "tags": {
              "Name": "sample-python-app-vpc"
            },
            "tags_all": {
              "Name": "sample-python-app-vpc"
            }
          },
          "identity_schema_version": 0
        }
      ]
    }
  ]
}